--- a/css/styles.css
+++ b/css/styles.css
@@ -71,3 +71,17 @@ body{font-family:'Helvetica', sans-serif;font-size:16px}body.active{overflow:hid
     cursor:pointer;
     color:black;
 }
+
+#title {
+    font-size:40px;
+    letter-spacing: 2px; 
+    -webkit-background-clip:text;
+    background-clip:text;
+    -webkit-text-fill-color: black;
+    background-size:500% 500% !important;
+    -webkit-animation: Gradient 20s ease infinite;
+    -moz-animation: Gradient 20s ease infinite;
+    -o-animation: Gradient 20s ease infinite;
+    animation: Gradient 20s ease infinite;
+    font-family: 'Futura', cursive;
+}
