--- a/css/styles.css
+++ b/css/styles.css
@@ -120,3 +120,10 @@ body{font-family:'Roboto', sans-serif;font-size:16px}body.active{overflow:hidden
   clear: both;
 }
 
+.pad-all {
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
